<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/upgrade_background"
        android:fitsSystemWindows="true"
        android:orientation="vertical">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:translationZ="0.1dp"
            app:elevation="0dp"

            >


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:theme="@style/StyleToolBarWhite"
                app:layout_scrollFlags="enterAlways|scroll"
                android:background="@drawable/toolbar_bg"

                >


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/logo_image_top"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:tint="@color/grey_11"
                        android:contentDescription="@string/image" />
                </RelativeLayout>


            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.AppBarLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/pixel_200dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:orientation="vertical">


                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_middle" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_large" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:text="@string/thank_you"
                    android:gravity="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_middle"
                    android:gravity="center_vertical"
                    android:text="@string/the_transaction_was_successful"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="@color/white" />


                <TextView
                    android:id="@+id/payment_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_middle"
                    android:gravity="center_vertical"
                    android:text="@string/status"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="@color/orange" />

                <TextView
                    android:id="@+id/payment_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_middle"
                    android:gravity="center_vertical"
                    android:text="@string/id"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="@color/golden_gate" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UselessLeaf" />


            <LinearLayout
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="70dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_start_watching"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="-4dp"
                    android:layout_marginEnd="-4dp"
                    android:background="@drawable/btn_gradient"
                    android:text="@string/start_watching"
                    android:layout_marginTop="@dimen/pixel_10dp"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/spacing_middle">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/copyright"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/grey_40" />

            </LinearLayout>


        </RelativeLayout>


    </LinearLayout>
</layout>