<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <FrameLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp">

        <RelativeLayout
            android:id="@+id/epLayout"
            android:layout_width="wrap_content"
            android:layout_marginBottom="@dimen/pixel_10dp"
            android:layout_height="120dp">

            <ImageView
                android:id="@+id/epcover"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@drawable/fragment_shadows"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image" />


            <LinearLayout
                android:id="@+id/mPlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/PlayButtonIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/playbutton"
                    android:contentDescription="@string/image" />


            </LinearLayout>


        </RelativeLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:orientation="vertical"
            android:padding="@dimen/pixel_15dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="3dp">

                <TextView
                    android:id="@+id/movieName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:text="@string/name"
                    android:textStyle="bold"
                    android:maxLength="15"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/grey_11"
                    android:textSize="10sp" />


                <TextView
                    android:id="@+id/movieGenre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_middle"
                    android:textStyle="bold"
                    android:text="@string/genre"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/golden_gate"
                    android:textSize="10sp" />


            </LinearLayout>


            <TextView
                android:id="@+id/epoverview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_overview_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/grey_20"
                android:textSize="10sp"
                android:maxLines="3"
                android:textStyle="bold" />

        </LinearLayout>


    </FrameLayout>
</layout>




