<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <FrameLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/epLayout"
            android:layout_width="wrap_content"
            android:layout_marginBottom="@dimen/pixel_10dp"
            android:layout_height="@dimen/pixel_200dp">

            <ImageView
                android:id="@+id/epcover"
                android:layout_width="match_parent"
                android:layout_height="@dimen/pixel_200dp"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/pixel_200dp"
                android:background="@drawable/fragment_shadows"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image" />


            <LinearLayout
                android:id="@+id/mPlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/spacing_mlarge"
                android:layout_marginStart="@dimen/spacing_mlarge"
                android:gravity="start"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/view_islive"
                    app:fontFamily="sans-serif-black"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/margin_20"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/red_live"
                    android:paddingStart="4dp"
                    android:paddingTop="3dp"
                    android:paddingEnd="4dp"
                    android:paddingBottom="4dp"
                    android:text="@string/live_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/grey_11"
                    android:textSize="12sp"
                    android:textStyle="bold" />


            </LinearLayout>


        </RelativeLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="190dp"
            android:orientation="vertical"
            android:padding="@dimen/pixel_15dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="3dp">


                <TextView
                    android:id="@+id/eptitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_middle"
                    android:textStyle="bold"
                    android:text="@string/title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/grey_11"
                    android:textSize="14sp" />


            </LinearLayout>


            <TextView
                android:id="@+id/epoverview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_overview_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/grey_20"
                android:textSize="12sp"
                android:maxLines="3"
                android:textStyle="bold" />

        </LinearLayout>


    </FrameLayout>
</layout>




