<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <FrameLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/pixel_328dp"
        android:background="@android:color/transparent">


        <ImageView
            android:id="@+id/item_movie_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/pixel_328dp"
            android:layout_gravity="top"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/pixel_328dp"
            android:layout_gravity="top"
            android:background="@drawable/fragment_shadows"
            android:contentDescription="@string/image" />




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/mgenres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:gravity="center"
                    android:text="@string/genre"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/golden_gate"
                    android:textSize="12sp"
                    app:fontFamily="sans-serif-black" />


                <Button
                    android:id="@+id/btn_premuim"
                    android:layout_width="wrap_content"
                    android:layout_height="43dp"
                    android:background="@drawable/btn_premuim"
                    android:gravity="center"
                    android:text="@string/premuim"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:visibility="gone" />


            </LinearLayout>

            <TextView
                android:id="@+id/movietitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/grey_11"
                android:textSize="20sp"
                app:fontFamily="sans-serif-black" />


            <TextView
                android:id="@+id/movie_premuim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/main_color"
                android:layout_marginTop="3dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:paddingStart="7dp"
                android:layout_gravity="center_horizontal"
                android:paddingEnd="7dp"
                android:textStyle="bold"
                android:text="Premuim"
                android:visibility="gone"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/grey_11"
                android:textSize="10sp"
                android:layout_marginBottom="10dp"
                app:fontFamily="sans-serif-black"
                tools:text="Premuim" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">


                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


    </FrameLayout>


</layout>
