<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/app_background"
        android:alpha="0.90"
        app:cardCornerRadius="@dimen/spacing_medium"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <com.easyplex.ui.player.views.CloseStateImageButton
                    android:id="@+id/bt_close"
                    android:layout_width="30dp"
                    android:layout_marginTop="@dimen/pixel_10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_height="30dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="@color/grey_20"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-40dp"
                android:orientation="vertical"
                android:padding="@dimen/spacing_large">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark">

                    <com.easyplex.util.GridItemImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        app:srcCompat="@drawable/ic_download"
                        android:tint="@color/white"
                        android:contentDescription="@string/image" />

                </LinearLayout>

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:autoLink="web"
                    android:text="@string/about_no_stream_download_episode"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/white" />

            </LinearLayout>

            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/bt_getcode"
                style="@style/RippleStyleWhite"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xxlarge"
                android:background="@drawable/bg_gradient">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/back"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@android:color/white"
                    app:fontFamily="sans-serif-medium" />

            </com.balysv.materialripple.MaterialRippleLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>